# https-github.com-zephyrproject-rtos-zephyr

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  Kconfig.zephyr  MAINTAINERS.yml  README.rst  west.yml
.github/workflows/: scorecards.yml  twister_tests_blackbox.yml
arch/: Kconfig
arch/arm/: Kconfig
arch/riscv/: Kconfig
cmake/: gcc-m-cpu.cmake  gcc-m-fpu.cmake  gen_version_h.cmake
cmake/flash/: CMakeLists.txt
cmake/modules/: dts.cmake  extensions.cmake  version.cmake
doc/: CMakeLists.txt  conf.py  glossary.rst
doc/releases/: migration-guide-3.7.rst  release-notes-3.6.rst  release-notes-3.7.rst
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  adc_ad559x.c  adc_ads1x1x.c  adc_esp32.c  adc_mcux_lpadc.c  adc_nrfx_saadc.c  adc_smartbond_gpadc.c  adc_smartbond_sdadc.c  adc_stm32.c
drivers/can/: can_mcp251xfd.c  can_sam.c
drivers/console/: Kconfig  (+2 more)
drivers/video/: CMakeLists.txt  Kconfig  video_mcux_csi.c  video_mcux_mipi_csi2rx.c  video_mcux_smartdma.c  video_stm32_dcmi.c  video_sw_generator.c
drivers/video/sensor/: CMakeLists.txt  Kconfig
kernel/: CMakeLists.txt  Kconfig  Kconfig.init  cpu.c  device.c  idle.c  init.c  sched.c  userspace.c
modules/: Kconfig
samples/net/sockets/coap_server/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
samples/net/sockets/coap_server/boards/: native_posix.conf
samples/net/sockets/coap_server/src/: main.c
scripts/: get_maintainer.py  list_boards.py  requirements-base.txt  set_assignees.py
submanifests/: optional.yaml
subsys/: CMakeLists.txt  Kconfig
tests/: Kconfig.sysbuild
(+958 files in other folders)
